--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "eslint gulpfile.babel.js && gulp watch",
     "build": "eslint gulpfile.babel.js && gulp"
   },
   "keywords": [],
@@ -29,6 +30,7 @@
     "gulp-data": "^1.3.1",
     "gulp-mjml": "^4.0.2",
     "gulp-nunjucks": "^5.0.1",
+    "gulp-rename": "^2.0.0",
     "mjml": "^4.6.3",
     "nunjucks": "^3.2.2"
   }
